# intelli-tara

./: .gitignore  Makefile  README.md
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: assets.py  auth.py  documents.py  knowledge.py  projects.py  reports.py  threats.py
backend/app/clients/: __init__.py
backend/app/clients/ai/: __init__.py  qwen_client.py
backend/app/clients/ai/prompts/: __init__.py  architecture_understanding.py  asset_identification.py  security_measure.py  threat_analysis.py
backend/app/clients/graph/: __init__.py
backend/app/clients/storage/: __init__.py
backend/app/core/: config.py  database.py  exceptions.py  middleware.py  security.py
backend/app/models/: __init__.py  asset.py  audit.py  base.py  document.py  knowledge.py  project.py  report.py  threat.py  user.py
backend/app/schemas/: __init__.py  asset.py  common.py  document.py  project.py  report.py  threat.py  user.py
backend/app/services/: asset_identifier.py  cache_service.py  document_service.py  knowledge_service.py  report_generator.py  risk_calculator.py  threat_analyzer.py
backend/app/services/parsers/: __init__.py  base.py  excel_parser.py  image_parser.py  pdf_parser.py  word_parser.py
backend/app/tasks/: __init__.py
backend/tests/: conftest.py  test_auth.py  test_parsers.py  test_risk_calculator.py
deploy/: .env.example  docker-compose.dev.yml  docker-compose.yml
docs/: MY25EV_Platform_IVI_TARA_Report.xlsx  deployment.md
(+56 files in other folders)
